show locations and times

--- a/frontend/src/assets/styles/application.scss
+++ b/frontend/src/assets/styles/application.scss
@@ -1,3 +1,17 @@
+h2 {
+  margin: 0 auto;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.search-params-cont {
+  min-width: 150px;
+  padding-right: 20px;
+}
+
 #date-container {
   display: flex;
   flex-direction: column;
