--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -25,6 +25,10 @@ h4 {
   max-width: 500px;
 }
 
+.event-container:hover {
+  cursor: pointer;
+}
+
 .event-container + .event-container {
   margin-top: 12px;
 }
