--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,6 +2,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+button {
+  border: 2px solid black;
+  border-radius: 8px 8px;
+  font-size: 20px;
+  margin: 5px 8px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -9,8 +20,10 @@ ul {
 }
 
 li {
-  height: 100dvh;
+  color: silver;
+  font-style: italic;
   min-width: 150px;
+  padding: 0 8px;
 }
 
 li:nth-child(even) {
@@ -18,10 +31,47 @@ li:nth-child(even) {
 }
 
 h3 {
+  color: darkblue;
+  font-style: normal;
   text-align: center;
+}
+
+#choices-list {
+  margin-bottom: 21px;
 }
 
 #schedules-container {
   display: flex;
   flex-direction: row;
+}
+
+.button-container {
+  padding: 8px 0 16px 0;
+}
+
+.date-btn {
+  background-color: rgb(206, 14, 45, .1);
+  border: 2px solid rgb(206, 14, 45);
+}
+
+.hidden-date {
+  background-color: rgb(206, 14, 45);
+  border: 2px solid rgb(206, 14, 45);
+  color: white;
+}
+
+.column-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.event-container {
+  color: rgb(100, 100, 100);
+  font-style: normal;
+  padding: 5px;
+}
+
+.event-container:hover {
+  background-color: rgb(100, 100, 100, 0.3);
+  cursor: pointer;
 }
