--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -1,6 +1,19 @@
 body {
+  color: rgb(98, 98, 98);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  line-height: 21px;
   margin: 0 auto;
+}
+
+a, a:visited {
+  color: rgb(43, 179, 129);
+  text-decoration: none;
+}
+
+a:hover {
+  border-bottom: 2px solid rgb(43, 179, 129);
+  text-decoration: none;
 }
 
 main {
@@ -22,6 +35,10 @@ ul {
   padding: 0
 }
 
+h1, h3 {
+  color: rgb(90, 90, 90);
+}
+
 h2 {
   display: flex;
   justify-content: center;
@@ -29,6 +46,10 @@ h2 {
 
 #logo-container {
   margin: 8px 16px;
+}
+
+#logo-container:hover {
+  border-bottom: 0;
 }
 
 #nav-links {
@@ -46,6 +67,10 @@ h2 {
   font-weight: 700;
   padding: 15px;
   text-decoration: none;
+}
+
+.nav-link:hover {
+  border-bottom: 0;
 }
 
 .active {
