--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -1,84 +1,54 @@
 body {
-  color: rgb(98, 98, 98);
+  color: rgb(87, 87, 87);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
-  line-height: 21px;
+  line-height: 22px;
   margin: 0 auto;
 }
 
-a, a:visited {
-  color: rgb(43, 179, 129);
-  text-decoration: none;
-}
-
-a:hover {
-  border-bottom: 2px solid rgb(43, 179, 129);
-  text-decoration: none;
-}
-
 main {
-  margin: 18px;
+  margin: 0 auto;
+  max-width: 1100px;
 }
 
 nav {
-  background-color: rgb(235, 235, 235);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 18px;
+  background-color: rgb(255, 221, 141, .5);
   min-height: 64px;
-  width: dvw;
+  width: 100%;
 }
 
-ul {
-  list-style: none;
-  padding: 0
-}
+/* Generic */
 
-h1, h3 {
-  color: rgb(90, 90, 90);
-}
-
-h2 {
+.flex-row {
   display: flex;
-  justify-content: center;
 }
+
+/* Navigation */
 
 #logo-container {
-  margin: 8px 16px;
-}
-
-#logo-container:hover {
-  border-bottom: 0;
+  height: 100%;
+  margin: 10px 10px 8px 20px;
 }
 
 #nav-links {
   display: flex;
   flex-direction: row;
+  list-style: none;
+  margin: 0;
+  margin-right: 1.5rem;
+  padding: 0;
 }
 
-.link-container {
-  margin: auto;
-  padding: 15px;
-}
-
-.nav-link, .nav-link:visited {
-  color: rgb(245, 124, 0);
-  font-weight: 700;
-  padding: 15px;
-  text-decoration: none;
-}
-
-.nav-link:hover {
-  border-bottom: 0;
+#top-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
 .active {
-  background-color: rgb(255, 221, 141);
-}
-
-.btn-container {
-  padding: 8px 0 16px 0;
+  background-color: rgb(240, 246, 251);
 }
 
 .btn {
@@ -92,6 +62,14 @@ h2 {
 .btn:hover {
   cursor: pointer;
 }
+
+.btn-container {
+  padding: 8px 0 0 0;
+}
+
+/* 
+  Button styling
+*/
 
 .hidden {
   background-color: rgb(206, 14, 45);
@@ -112,63 +90,84 @@ h2 {
   color:rgb(17, 145, 0);
 }
 
-.flex-row {
+.link-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
-.MuiAutocomplete-root {
+.nav-link, .nav-link:visited {
+  color: rgb(25, 118, 210);
+  font-weight: 700;
+  padding: 15px;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  border-bottom: 2px solid rgb(25, 118, 210);
+}
+
+/* Main Content */
+
+/* Filters */
+
+#filters-container {
+  padding: 15px;
+}
+
+#filter-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 19px;
+}
+
+.filter-component-container+.filter-component-container {
+  margin-top: 25px;
+}
+
+.filter-list {
+  margin-right: 24px;
+  margin-top: 12px;
+}
+
+.switch-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 60px;
+}
+
+.tabs-container {
+  margin-top: 12px;
+}
+
+.time-divider {
+  margin: auto 22px;
+  vertical-align: center;
+}
+
+.time-range-label {
   margin-bottom: 12px;
 }
 
-.MuiFormControlLabel-root {
-  display: flex;
-  flex-direction: row-reverse;
-}
+/* Time Display */
 
 .time-title {
   background-color: rgb(43, 179, 129, .1);
   color: rgb(43, 179, 129);
   font-weight: 700;
   padding: 5px 25px;
-}
-
-.event-list {
-  margin: 12px 0;
-}
-
-.time-divider {
-  margin: auto 25px;
-  vertical-align: center;
-}
-
-.margin-auto {
-  margin: auto 0;
-}
-
-.cost-column {
-  text-align: right;
-  margin-left: 10px;
-  width: 35px;
-}
-
-.duration-column {
   text-align: center;
-  width: 150px;
 }
 
-.event-details {
-  display: flex;
-  flex-direction: row;
-}
+/* Event Display */
 
 .event-listing {
   border-bottom: 1px solid rgb(222, 222, 222);
   border-top: 1px solid rgb(222, 222, 222);
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  padding: 2px 14px 2px 4px;
+  padding: 0 4px;
 }
 
 .event-listing:nth-child(even) {
@@ -179,24 +178,34 @@ h2 {
   border-top: 0;
 }
 
-.listing-header {
-  border-top: 1px solid rgb(222, 222, 222);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 2px 14px 2px 4px;
-  font-weight: 700;
-}
-
-.tickets-column {
-  text-align: left;
-  width: 55px;
-}
-
 .sold-out {
   background-color: rgb(215, 215, 215) !important;
 }
 
-.switch-container {
-  margin: 15px 0 20px 0;
+.event-details {
+  display: flex;
+}
+
+.listing-header {
+  font-weight: 700;
+}
+
+.cost-column {
+  text-align: center;
+  width: 35px
+}
+
+.duration-column {
+  margin: 0 5px;
+  text-align: center;
+  width: 65px
+}
+
+.event-title-column {
+  padding-right: 22px;
+}
+
+.tickets-column {
+  text-align: center;
+  width: 55px
 }
