--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -218,3 +218,15 @@ nav {
   text-align: center;
   width: 55px
 }
+
+/* Event Modal */
+
+.modal-container {
+  position: 'absolute';
+  top: '50%';
+  left: '50%';
+  transform: 'translate(-50%, -50%)';
+  background-color: rgb(240, 246, 251);
+  min-width: 345px;
+  max-width: 800px;
+}
