--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -55,6 +55,7 @@ nav {
   background-color: rgb(17, 145, 0, .08);
   border: 2px solid rgb(17, 145, 0);
   border-radius: 8px 8px;
+  font-size: 18px;
   margin: 5px 8px;
   padding-left: 15px;
 }
