--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -142,6 +142,18 @@ a:hover {
   margin-top: 12px;
 }
 
+.slider-box {
+  padding-right: 17px;
+}
+
+.slider-container {
+  width: 400px;
+}
+
+.slider-end-label {
+  min-width: 50px;
+}
+
 .radio-group-container {
   padding: 5px 0 18px 0;
 }
