--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $orange: rgb(255, 159, 96);
 $light-orange: rgb(255, 201, 135);
+$yellow: rgb(255, 221, 141);
 $blue-gray: rgb(195, 221, 244);
 $red: rgb(255, 73, 73);
 $dark-red: rgb(183, 9, 43);
@@ -10,4 +11,4 @@ $blue: rgb(145, 224, 232);
 
 
 // Layout
-$nav-bg-color: $light-orange;
+$nav-bg-color: rgb(255, 221, 141, .45);
