--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -12,3 +12,6 @@ $blue: rgb(145, 224, 232);
 
 // Layout
 $nav-bg-color: rgb(255, 221, 141, .45);
+$nav-link-color: $dark-green;
+$nav-link-bg-color: rgb(213, 229, 243);
+$header-color: $dark-green;
