--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -8,6 +8,7 @@ $dark-red: rgb(183, 9, 43);
 $green: rgb(43, 179, 129);
 $dark-green: rgb(15, 147, 144);
 $blue: rgb(145, 224, 232);
+$info-blue: rgb(25, 118, 210);
 
 
 // Layout
@@ -15,3 +16,5 @@ $nav-bg-color: rgb(255, 221, 141, .45);
 $nav-link-color: $dark-green;
 $nav-link-bg-color: rgb(213, 229, 243);
 $header-color: $dark-green;
+
+$loading-color: $info-blue;
