age filter working

--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -18,3 +18,7 @@ $nav-link-bg-color: rgb(213, 229, 243);
 $header-color: $dark-green;
 
 $loading-color: $info-blue;
+
+// Visible
+$visible-color: rgb(3, 105, 68);
+$visible-bg: rgba(6, 234, 150, 0.3);
