--- a/frontend/assets/styles/components/containers.scss
+++ b/frontend/assets/styles/components/containers.scss
@@ -3,10 +3,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin: 0 auto;
+}
+
+.filter-container {
+  margin-top: 15px;
+  text-align: center;
 }
 
 .filter-label {
   font-weight: 550;
   margin-bottom: 5px;
+}
+
+.switches-container {
+  text-align: center;
+  min-width: 285px;
 }
