--- a/frontend/assets/styles/application.scss
+++ b/frontend/assets/styles/application.scss
@@ -1,2 +1,2 @@
-@import "./base/0_base.scss";
-@import "./components/0_components.scss";
+@import './base/0_base.scss';
+@import './components/0_components.scss';
