--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -1,24 +1,23 @@
 // Colors
-$orange: rgb(255, 159, 96);
-$light-orange: rgb(255, 201, 135);
-$yellow: rgb(255, 221, 141);
-$blue-gray: rgb(195, 221, 244);
-$red: rgb(255, 73, 73);
-$dark-red: rgb(183, 9, 43);
-$green: rgb(43, 179, 129);
-$dark-green: rgb(15, 147, 144);
-$blue: rgb(145, 224, 232);
-$info-blue: rgb(25, 118, 210);
+$bice: #006ba6ff;
+$dodger: #0496ffff;
+$xanthous: #ffbc42ff;
+$raspberry: #d81159ff;
+$quinacridone: #8f2d56ff;
+$cerulean: #0081a7ff;
+$verdigris: #00afb9ff;
+$lightYellow: #fdfcdcff;
+$lightOrange: #fed9b7ff;
+$bittersweet: #f07167ff;
+$seasalt: #f8f9faff;
+$platinum: #dee2e6ff;
+$french: #adb5bdff;
+$outer: #495057ff;
+$eerie: #212529ff;
 
-
-// Layout
-$nav-bg-color: rgb(255, 221, 141, .45);
-$nav-link-color: $dark-green;
-$nav-link-bg-color: rgb(213, 229, 243);
-$header-color: $dark-green;
-
-$loading-color: $info-blue;
-
-// Visible
-$visible-color: rgb(3, 105, 68);
-$visible-bg: rgba(6, 234, 150, 0.3);
+// General
+$font-color: $outer;
+$nav-bg: $dodger;
+$nav-color: $seasalt;
+$nav-link-color: $seasalt;
+$nav-link-hover: $lightOrange;
