--- a/frontend/assets/styles/base/0_base.scss
+++ b/frontend/assets/styles/base/0_base.scss
@@ -1,1 +1,22 @@
 @import "./variables.scss";
+
+body {
+  color: $font-color;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0 auto;
+}
+
+main {
+  padding: 5px;
+}
+
+nav {
+  background-color: $nav-bg;
+  color: $nav-color;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
