--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -21,3 +21,6 @@ $nav-bg: $dodger;
 $nav-color: $seasalt;
 $nav-link-color: $seasalt;
 $nav-link-hover: $lightOrange;
+
+// Tabs
+$border-color: $eerie;
