--- a/frontend/assets/styles/components/ui.scss
+++ b/frontend/assets/styles/components/ui.scss
@@ -25,7 +25,7 @@
 #filter-drawer-content-wrapper {
   padding: 25px 5px;
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 1200px;
 }
 
 .filter-content {
@@ -78,7 +78,7 @@
 
   .filter-content {
     .content-group {
-      margin: 5px;
+      margin: 5px 15px;
     }
   }
 }
