--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -25,7 +25,7 @@ $nav-link-color: $seasalt;
 $nav-link-hover: $lightOrange;
 
 // Toggle Buttons
-$hidden-btn-bg-color: $platinum;
+$hidden-btn-bg-color: $seasalt;
 $hidden-btn-color: $raspberry;
 
 // Tabs
