--- a/frontend/assets/styles/base/0_base.scss
+++ b/frontend/assets/styles/base/0_base.scss
@@ -22,3 +22,13 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+a, a:visited {
+  border-bottom: $link-color solid 2px;
+  color: $link-color;
+  text-decoration: none;
+}
+
+a:hover {
+  border-bottom: $link-hover solid 2px;
+}
