--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -19,6 +19,8 @@ $eerie: #212529ff;
 
 // General
 $font-color: $outer;
+$link-color: $bice;
+$link-hover: $seasalt;
 $nav-bg: $dodger;
 $nav-color: $seasalt;
 $nav-link-color: $seasalt;
