--- a/frontend/assets/styles/components/ui.scss
+++ b/frontend/assets/styles/components/ui.scss
@@ -73,6 +73,11 @@
   }
 }
 
+.time-range {
+  display: flex;
+  flex-direction: row;
+}
+
 @media only screen and (min-width: 600px) {
   #daily-tabs-container {
     button {
