hide columns responsive

--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -17,6 +17,13 @@ $french: #838a90;
 $outer: #495057ff;
 $eerie: #212529ff;
 
+// Break Points
+$xs: 375px;
+$s: 600px;
+$md: 800px;
+$lg: 1000px;
+$xl: 1200px;
+
 // General
 $font-color: $outer;
 $link-color: $bice;
