change fave icon color

--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -36,6 +36,7 @@ $nav-link-hover: $lightOrange;
 // Toggle Buttons
 $hidden-btn-bg-color: $seasalt;
 $hidden-btn-color: $raspberry;
+$favorite-btn-color: $raspberry;
 
 // Tabs
 $border-color: $eerie;
