create card coloring

--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -50,3 +50,7 @@ $sold-out-row-text: $french;
 $sold-out-row-bg: $platinum;
 $row-alt-color: $dodger-20;
 $event-details-row: $lightOrange-50;
+
+// Cards
+$card-odd-bg: $lightYellow;
+$card-even-bg: $lightOrange;
