--- a/frontend/assets/styles/components/favorites.scss
+++ b/frontend/assets/styles/components/favorites.scss
@@ -1,7 +1,25 @@
+.fave-card {
+  font-size: 14px;
+  line-height: 14px;
+
+  .fave-content {
+    padding: 12px 12px 0 12px !important;
+  }
+}
+
 .fave-card:nth-child(odd) {
   background-color: $card-odd-bg;
 }
 
 .fave-card:nth-child(even) {
   background-color: $card-even-bg;
+}
+
+.fave-card+.fave-card {
+  margin-top: 12px;
+}
+
+.fave-title {
+  font-weight: 700;
+  padding-bottom: 4px;
 }
