--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -54,3 +54,4 @@ $event-details-row: $lightOrange-50;
 // Cards
 $card-odd-bg: $lightYellow;
 $card-even-bg: $lightOrange;
+$fave-id-color: $french;
