export landing page

--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -55,3 +55,4 @@ $event-details-row: $lightOrange-50;
 $card-odd-bg: $lightYellow;
 $card-even-bg: $lightOrange;
 $fave-id-color: $french;
+$export-btn-color: $verdigris;
