--- a/frontend/assets/styles/components/favorites.scss
+++ b/frontend/assets/styles/components/favorites.scss
@@ -41,3 +41,10 @@
 .modal-button {
   text-transform: capitalize;
 }
+
+.export-btn, .export-btn:visited {
+  border-color: $export-btn-color;
+  color: $export-btn-color;
+  float: right;
+  margin-bottom: 8px;
+}
