--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -56,3 +56,8 @@ $card-odd-bg: $lightYellow;
 $card-even-bg: $lightOrange;
 $fave-id-color: $french;
 $export-btn-color: $verdigris;
+
+// Export Table
+$column-border: $eerie;
+$row-border: $platinum;
+$item-border: $outer;
