no event message

--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -32,6 +32,7 @@ $nav-bg: $dodger;
 $nav-color: $seasalt;
 $nav-link-color: $seasalt;
 $nav-link-hover: $lightOrange;
+$no-data-color: $french;
 
 // Toggle Buttons
 $hidden-btn-bg-color: $seasalt;
