--- a/frontend/assets/styles/components/ui.scss
+++ b/frontend/assets/styles/components/ui.scss
@@ -88,6 +88,11 @@
   justify-content: end;
 }
 
+.no-events {
+  color: $no-data-color;
+  padding: 15px 0;
+}
+
 @media only screen and (min-width: $s) {
   #daily-tabs-container {
     button {
