--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -27,7 +27,7 @@ $xl: 1200px;
 // General
 $font-color: $outer;
 $link-color: $bice;
-$link-hover: $seasalt;
+$link-hover: $raspberry;
 $nav-bg: $dodger;
 $nav-color: $seasalt;
 $nav-link-color: $seasalt;
@@ -56,3 +56,6 @@ $event-details-row: $lightOrange-50;
 $card-odd-bg: $lightYellow;
 $card-even-bg: $lightOrange;
 $fave-id-color: $french;
+
+// Content
+$subtext-color: $french;
