--- a/frontend/assets/styles/components/navigation.scss
+++ b/frontend/assets/styles/components/navigation.scss
@@ -1,9 +1,10 @@
-#navigation-container {
+#navigation-links-container {
   display: flex;
   font-size: 18px;
   justify-content: space-between;
   margin: 0 auto;
   max-width: 800px;
+  padding: 12px;
 
   a, a:visited {
     color: $nav-link-color;
@@ -17,15 +18,14 @@
   }
 }
 
-#nav-title {
-  display: flex;
-  justify-content: center;
-  padding: 8px;
-}
-
 #nav-link-container {
   display: flex;
   flex-direction: row;
+}
+
+#nav-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .link-container {
