--- a/frontend/assets/styles/components/navigation.scss
+++ b/frontend/assets/styles/components/navigation.scss
@@ -28,6 +28,11 @@
   flex-direction: column;
 }
 
+#update-date-container {
+  margin: 0 auto;
+  padding-bottom: 8px;
+}
+
 .link-container {
   display: flex;
   flex-direction: column;
