--- a/frontend/assets/styles/components/favorites.scss
+++ b/frontend/assets/styles/components/favorites.scss
@@ -42,15 +42,14 @@
   text-transform: capitalize;
 }
 
-<<<<<<< HEAD
 .export-btn, .export-btn:visited {
   border-color: $export-btn-color;
   color: $export-btn-color;
   float: right;
   margin-bottom: 8px;
-=======
+}
+
 .favorite-actions {
   display: flex;
   justify-content: space-between;
->>>>>>> main
 }
