--- a/frontend/assets/styles/components/0_components.scss
+++ b/frontend/assets/styles/components/0_components.scss
@@ -1,5 +1,6 @@
 @import './content.scss';
 @import './favorites.scss';
 @import './navigation.scss';
+@import './schedule.scss';
 @import './table.scss';
 @import './ui.scss';
