--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -59,3 +59,10 @@ $fave-id-color: $french;
 
 // Content
 $subtext-color: $french;
+
+// Schedule:
+$time-label-bg: $lightOrange-50;
+$time-label-color: $bittersweet;
+$conflict-btn-color: $raspberry;
+$detail-color: $french;
+$system-color: $outer;
