styling for fave card

--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -64,5 +64,5 @@ $subtext-color: $french;
 $time-label-bg: $lightOrange-50;
 $time-label-color: $bittersweet;
 $conflict-btn-color: $raspberry;
-$detail-color: $french;
-$system-color: $outer;
+$fave-item-color: $outer;
+$details-color: $french;
