--- a/frontend/assets/styles/base/variables.scss
+++ b/frontend/assets/styles/base/variables.scss
@@ -66,3 +66,8 @@ $time-label-color: $bittersweet;
 $conflict-btn-color: $raspberry;
 $fave-item-color: $outer;
 $details-color: $french;
+$light-color: $seasalt;
+$sold-out-badge-bg: $quinacridone;
+$diff-day-badge-bg: $raspberry;
+$materials-badge-bg: $xanthous;
+$tournament-badge-bg: $verdigris;
