--- a/frontend/assets/styles/components/schedule.scss
+++ b/frontend/assets/styles/components/schedule.scss
@@ -17,6 +17,7 @@
   .fave-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
   }
 
   .fave-list-item {
@@ -27,7 +28,7 @@
     .badge-container {
       display: flex;
       flex-wrap: wrap;
-      padding: 15px 5px 0 5px;
+      max-width: 510px;
     }
 
     .conflicts-btn {
@@ -80,17 +81,16 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      text-align: center;
+      padding: 15px 5px 0 5px;
     }
 
     .fave-badge {
       border-radius: 5px 5px;
       display: flex;
       font-size: 14px;
+      margin: auto 5px;
       padding: 5px 10px 5px 7px;
-    }
-
-    .fave-badge+.fave-badge {
-      margin-left: 25px;
     }
 
     .badge-icon {
@@ -114,6 +114,18 @@
     .tournament-badge {
       background-color: $tournament-badge-bg;
       color: $light-color;
+    }
+  }
+}
+
+.action-buttons {
+  display: flex;
+
+  .button-container {
+    margin: 0 5px;
+
+    button {
+      text-transform: capitalize;
     }
   }
 }
